# furca

./: .gitignore  .gitlab-ci.yml  README.md  setup.cfg
furca/: __init__.py  comm.py  manager.py  resource.py  worker.py
