[metadata]
name = furca
version = 1.0.0
author =
    Shiz <hi@shiz.me>
url = https://github.com/Shizmob/furca
description = Simple Python pre-forker

[options]
packages=
    furca

[options.extras_require]
tests =
    mypy
    yapf

[mypy]
ignore_missing_imports = True
# below options are equivalent to --strict
warn_unused_configs = True
disallow_subclassing_any = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True

[yapf]
based_on_style = pep8
column_limit = 120
blank_line_before_nested_class_or_def = False
blank_lines_around_top_level_definition = 1
blank_lines_between_top_level_imports_and_variables = 2
